// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SearchInput default 1`] = `
<label
  data-css-w0yocm=""
>
  <div
    data-css-1r967oi=""
  >
    <div
      data-css-1xm24a9=""
    >
      <div
        data-css-1e3i43a=""
      >
        <input
          data-css-azf86w=""
          disabled={false}
          placeholder="Search"
          type="search"
        />
      </div>
    </div>
    <div
      data-css-1x5ndtu=""
    >
      <div
        data-css-otejxm=""
      >
        <svg
          aria-label="search icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.707 20.294L16.314 14.9C17.403 13.504 18 11.799 18 10c0-2.137-.833-4.144-2.344-5.656C14.145 2.832 12.137 2 10 2c-2.137 0-4.146.832-5.656 2.344C2.832 5.856 2 7.863 2 10c0 2.137.832 4.146 2.344 5.656C5.854 17.168 7.863 18 10 18c1.799 0 3.504-.596 4.9-1.685l5.393 5.393 1.414-1.414zM10 16c-1.603 0-3.109-.624-4.242-1.757C4.624 13.11 4 11.603 4 10c0-1.602.624-3.109 1.758-4.242C6.891 4.624 8.397 4 10 4c1.602 0 3.109.624 4.242 1.758C15.376 6.891 16 8.398 16 10c0 1.603-.624 3.11-1.758 4.243C13.109 15.376 11.602 16 10 16z"
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;

exports[`Storyshots SearchInput when loading 1`] = `
<label
  data-css-w0yocm=""
>
  <div
    data-css-1r967oi=""
  >
    <div
      data-css-1xm24a9=""
    >
      <div
        data-css-1e3i43a=""
      >
        <input
          data-css-azf86w=""
          disabled={false}
          placeholder="Search"
          type="search"
        />
      </div>
    </div>
    <div
      data-css-1x5ndtu=""
    >
      <div
        data-css-1abx40i=""
      >
        <svg
          data-css-1txt1eh=""
          version="1.1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="24"
            cy="24"
            data-css-1n6oxz3=""
            r={22}
          />
          <circle
            cx="24"
            cy="24"
            data-css-y5gw89=""
            r={22}
            strokeDasharray="138.23007675795088 138.23007675795088"
            strokeDashoffset={103.67255756846316}
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;

exports[`Storyshots SearchInput with TextInput-type props 1`] = `
<label
  data-css-w0yocm=""
>
  <div
    data-css-n53zhn=""
  >
    Label
  </div>
  <div
    data-css-1r967oi=""
  >
    <div
      data-css-utxo7p=""
    >
      <div
        data-css-7vhsjg=""
      >
        <input
          data-css-azf86w=""
          disabled={false}
          placeholder="Le placeholder"
          type="search"
        />
        <div
          data-css-tzuwtx=""
        >
          <button
            data-css-7qxz4y=""
            disabled={false}
            onClick={[Function]}
            style={Object {}}
          >
            <div
              data-css-y80vay=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="close icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
                  />
                </svg>
              </div>
            </div>
            <span
              data-css-15b13by=""
            />
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-1x5ndtu=""
    >
      <div
        data-css-otejxm=""
      >
        <svg
          aria-label="search icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.707 20.294L16.314 14.9C17.403 13.504 18 11.799 18 10c0-2.137-.833-4.144-2.344-5.656C14.145 2.832 12.137 2 10 2c-2.137 0-4.146.832-5.656 2.344C2.832 5.856 2 7.863 2 10c0 2.137.832 4.146 2.344 5.656C5.854 17.168 7.863 18 10 18c1.799 0 3.504-.596 4.9-1.685l5.393 5.393 1.414-1.414zM10 16c-1.603 0-3.109-.624-4.242-1.757C4.624 13.11 4 11.603 4 10c0-1.602.624-3.109 1.758-4.242C6.891 4.624 8.397 4 10 4c1.602 0 3.109.624 4.242 1.758C15.376 6.891 16 8.398 16 10c0 1.603-.624 3.11-1.758 4.243C13.109 15.376 11.602 16 10 16z"
          />
        </svg>
      </div>
    </div>
    <div
      data-css-loo18p=""
    >
      <div
        data-css-otejxm=""
      >
        <svg
          aria-label="warning icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    data-css-1de0a6a=""
  >
    Sub label
  </div>
</label>
`;

exports[`Storyshots SearchInput with onClear prop 1`] = `
<label
  data-css-w0yocm=""
>
  <div
    data-css-1r967oi=""
  >
    <div
      data-css-1xm24a9=""
    >
      <div
        data-css-7vhsjg=""
      >
        <input
          data-css-azf86w=""
          disabled={false}
          placeholder="Search"
          type="search"
        />
        <div
          data-css-tzuwtx=""
        >
          <button
            data-css-7qxz4y=""
            disabled={false}
            onClick={[Function]}
            style={Object {}}
          >
            <div
              data-css-y80vay=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="close icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
                  />
                </svg>
              </div>
            </div>
            <span
              data-css-15b13by=""
            />
          </button>
        </div>
      </div>
    </div>
    <div
      data-css-1x5ndtu=""
    >
      <div
        data-css-otejxm=""
      >
        <svg
          aria-label="search icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.707 20.294L16.314 14.9C17.403 13.504 18 11.799 18 10c0-2.137-.833-4.144-2.344-5.656C14.145 2.832 12.137 2 10 2c-2.137 0-4.146.832-5.656 2.344C2.832 5.856 2 7.863 2 10c0 2.137.832 4.146 2.344 5.656C5.854 17.168 7.863 18 10 18c1.799 0 3.504-.596 4.9-1.685l5.393 5.393 1.414-1.414zM10 16c-1.603 0-3.109-.624-4.242-1.757C4.624 13.11 4 11.603 4 10c0-1.602.624-3.109 1.758-4.242C6.891 4.624 8.397 4 10 4c1.602 0 3.109.624 4.242 1.758C15.376 6.891 16 8.398 16 10c0 1.603-.624 3.11-1.758 4.243C13.109 15.376 11.602 16 10 16z"
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;
